# worldgen-mcp-unity

./: .gitignore  CONTRIBUTING.md  README.md  package.json
.github/: CODEOWNERS
Assets/Scripts/WorldGenMcp/Runtime/: WorldgenBackendClient.cs  WorldgenBoundaryDtos.cs
Docs/: ARCHITECTURE.md  BOUNDARY_CONTRACT.md  ENGINEERING_RULES.md
Docs/Specs/: world_generation_mcp_spec.md
ProjectSettings/: ProjectVersion.txt
backend/: Cargo.toml  README.md
backend/contracts/: worldgen_api.md
backend/crates/worldgen-api/: Cargo.toml
backend/crates/worldgen-api/src/: lib.rs
backend/crates/worldgen-core/: Cargo.toml
backend/crates/worldgen-core/src/: lib.rs
backend/crates/worldgen-server/: Cargo.toml
backend/crates/worldgen-server/src/: main.rs  tools.rs
