[workspace]
resolver = "2"
members = [
    "crates/worldgen-api",
    "crates/worldgen-core",
    "crates/worldgen-server",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
blake3 = "1"
clap = { version = "4", features = ["derive"] }

